// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extracts docs 1`] = `
Array [
  Object {
    "jsDoc": null,
    "kind": "function",
    "name": "a",
    "printed": "export function a() { }",
    "signature": Object {
      "parameters": Array [],
      "return": "void",
    },
    "sourceLocation": Object {
      "fileLine": 1,
      "filePath": "/test.ts",
    },
  },
  Object {
    "jsDoc": null,
    "kind": "function",
    "name": "b",
    "printed": "export function b(a: boolean) { }",
    "signature": Object {
      "parameters": Array [
        Object {
          "name": "a",
          "type": Object {
            "name": "boolean",
          },
        },
      ],
      "return": "void",
    },
    "sourceLocation": Object {
      "fileLine": 2,
      "filePath": "/test.ts",
    },
  },
  Object {
    "jsDoc": null,
    "kind": "function",
    "name": "c",
    "printed": "export function c(a: string): number { }",
    "signature": Object {
      "parameters": Array [
        Object {
          "name": "a",
          "type": Object {
            "name": "string",
          },
        },
      ],
      "return": "number",
    },
    "sourceLocation": Object {
      "fileLine": 3,
      "filePath": "/test.ts",
    },
  },
]
`;

exports[`jsdoc extracts doc from a variable statement 1`] = `
Object {
  "source": "/**
 * primary
 */",
}
`;

exports[`jsdoc splits multiple jsDoc blocks by primary and additional (closest to code is primary) 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "/**
 * additional 2
 */",
    },
    Object {
      "source": "/**
 * additional 1
 */",
    },
  ],
  "primary": Object {
    "source": "/**
 * primary
 */",
  },
}
`;

exports[`jsdoc whitespace and comments between multiple jsDoc blocks are ignored 1`] = `
Object {
  "additional": Array [
    Object {
      "source": "/**
 * additional 2
 */",
    },
    Object {
      "source": "/**
 * additional 1
 */",
    },
  ],
  "primary": Object {
    "source": "/**
 * primary
 */",
  },
}
`;
